--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
       <div class="card-body">
         <h3>{{ task.title }}</h3>
         <p>Added on {{ task.date }}</p>
-        
+        <a href="#" class="btn btn-primary">Edit</a>
+        <a href="#" class="btn btn-danger">Delete</a>
       </div>
     </div>
   {% endfor %}
